register, getbyid, login tested on swagger
