# openapi.json
@@ -71,52 +71,6 @@
             "description": "Unauthorized. An Expert authenticated session needs to be created"
           }
         }
-      },
-      "put": {
-        "tags": ["User"],
-        "summary": "An endpoint to update a user",
-        "operationId": "updateUsers",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of user",
-            "required": true,
-            "style": "simple",
-            "explode": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "$ref": "#/components/requestBodies/User"
-        },
-        "responses": {
-          "200": {
-            "description": "Successful update of user",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid Input",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized. An Expert authenticated session needs to be created"
-          }
-        }
       }
     },
     "/users/login": {
@@ -156,6 +110,41 @@
           },
           "400": {
             "description": "Invalid Input"
+          },
+          "401": {
+            "description": "Unauthorized. An Expert authenticated session needs to be created"
+          }
+        }
+      }
+    },
+    "/users/register": {
+      "post": {
+        "tags": ["User"],
+        "summary": "An endpoint to register user",
+        "operationId": "createUsers",
+        "requestBody": {
+          "$ref": "#/components/requestBodies/User"
+        },
+        "responses": {
+          "200": {
+            "description": "Successful creation of user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid Input",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
           },
           "401": {
             "description": "Unauthorized. An Expert authenticated session needs to be created"
